--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "07-restserver",
+    "name": "08-restserver",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node app"
+        "start": "node app.js"
     },
     "keywords": [],
     "author": "",
